# U-RNN

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REAEME.md  config.py  main.py  onnx_to_tensorrt.py  output.xlsx  rain_analysis.py  rain_generate.py  rainfalls.json  requirements.txt  results_markdown_table.md  run_train_multinodes.sh  show_origin_data.py  t.py  test.py  test.sh  train.sh  urnn_tensorrt.py  urnn_to_onnx.py  urnn_to_tensorrt.py  vis_metrics.ipynb  vis_metrics.py  vis_metrics_20240118.ipynb  visual_results.py
.ipynb_checkpoints/: config-checkpoint.py
code/: config.py  main.py  pyproject.toml  requirements.txt  requirements_tensorrt.txt  test.py  urnn_to_tensorrt.py
code/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
code/.github/workflows/: ci.yml
code/configs/: futian_scratch.yaml  lite.yaml  location1_scratch.yaml  location2_scratch.yaml  location3_scratch.yaml  network.yaml  ukea_scratch.yaml
code/configs/defaults/: data.yaml  training.yaml
code/docs/: dataset_knowledge.md
code/notebooks/: quickstart.ipynb
code/src/lib/dataset/: Dynamic2DFlood.py  futian_test.txt  futian_train.txt  location2_test.txt  location3_train.txt  ukea_test.txt  ukea_train.txt
code/src/lib/model/: earlystopping.py
code/src/lib/model/networks/: ConvRNN.py  decoder.py  encoder.py  losses.py  model.py  net_params.py  utils.py
code/src/lib/model/networks/head/: flood_head.py  network_blocks.py
code/src/lib/utils/: common.py  general.py  net_config.py  torch_utils.py
code/tools/: compare_metrics.py  convert_larfno_data.py  downsample_dataset.py  preprocess_ukea_rainfall.py
exp_records/: ConvLSTM-model optimize_exp_records.xlsx
(+45 files in other folders)
